app/frontend/assets/styles/components/_modal.scss
@mixin bodyModal {
    overflow: hidden;
    padding-right: 0;
}

@mixin modalVisible {
    opacity: 1;
    visibility: visible;
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(10px);

    .modal-backdrop {
        display: block;
        opacity: 0;
        transition: opacity 0.5s ease-in-out;
    }
}

body.show-dialog {
    @include bodyModal();
}

body.show-modal {
    @include bodyModal();

    .modal-backdrop {
        display: block;
        opacity: 0.5;
        transition: opacity 0.5s ease-in-out;
    }

    .modal:not(.modal-navigation).show {
        @include modalVisible();
    }

    .list--navigation-tools {
        display: block;
    }
}

body.show-navigation {
    .modal-backdrop {
        display: block;
        opacity: 0.5;
        transition: opacity 0.5s ease-in-out;
    }
    .modal-navigation.show {
        @include modalVisible();
        left: 0;
    }
}

body.show-modal--transparent {
    @include bodyModal();

    .modal-backdrop {
        display: block;
        opacity: 0.5;
        transition: opacity 0.5s ease-in-out;
    }

    .modal--transparent.show {
        @include modalVisible();
    }
}

body.show-modal--first-filter {
    .modal--first-filter {
        @include modalVisible();
    }
}

.modal {
    position: fixed;
    width: 100%;
    height: 100%;
    opacity: 0;
    visibility: hidden;
    transition: all 0.3s ease;
    top: 0;
    left: 0;
    overflow-x: hidden;
    overflow-y: auto;
    z-index: 2100;

    &-navigation {
        left: 100%;
        transition: left 0.5s ease-in-out;
    }
    &-dialog {
        display: flex;
        align-items: center;
        min-height: calc(100% - 3rem);
        position: relative;
        width: 90%;
        max-width: $modal-md;
        margin: 1.5rem auto;
    }

    &-content {
        background: $white;
        position: relative;
        display: flex;
        flex-direction: column;
        width: 100%;
        z-index: 2000;
    }

    &-header {
        position: relative;
        padding-left: $container-padding-x;
        padding-bottom: 4px;

        h1 {
            padding: 25px 1.5rem 0 0;
            margin: 0 0 1rem;
            font-size: calc(1.25rem + 1vw);

            > span {
                padding-right: 48px;
            }

            small {
                display: block;
                font-weight: 400;
                font-size: 1rem;
                margin-top: 0.5rem;
                padding: 4px $input-padding-y;
                line-height: 1.5rem;
                background-color: $gray-tint02;
            }
        }

        .info__extra {
            padding-right: 1.5rem;
        }
    }

    &-body {
        padding: 0 $container-padding-x $container-padding-x;
    }

    &-footer {
        display: flex;
        flex-wrap: wrap;
        flex-shrink: 0;
        align-items: center;
        justify-content: flex-end;
        padding: $modal-inner-padding;
    }

    &--images {
        .modal-dialog {
            max-width: none;
            width: 98%;
            height: 98%;
            margin: 0.5% auto;

            .modal-header {
                padding: 0;
                z-index: 10;
            }

            .modal-body {
                padding: 1% 1% 40px;
                box-sizing: border-box;
            }

            .modal-content,
            .modal-body,
            .container__image,
            ul,
            li,
            .image {
                height: 100%;
            }

            .image {
                width: 100%;
                height: 100%;
                object-fit: contain;
            }

            .image-counter {
                line-height: 47px;
                font-size: 0.625rem;
            }
        }

        .container__navigate-images {
            .navigate-images--left,
            .navigate-images--right {
                cursor: pointer;
                position: absolute;
                width: 48px;
                height: 48px;
                position: absolute;
                top: 50%;
                transform: translateY(-50%);

                opacity: 1;
                transition: opacity 0.25s ease-in;

                span {
                    display: block;

                    background-color: $black;

                    svg {
                        width: 40px;
                        height: 40px;
                        margin: 4px;
                        path {
                            fill: $white;
                        }
                    }
                }

                &.inactive {
                    opacity: 0;
                    pointer-events: none;
                }
            }
            .navigate-images--left {
                left: 0;
                span {
                    svg {
                        transform: rotate(180deg);
                    }
                }
            }

            .navigate-images--right {
                right: 0;
            }
        }
    }
}

.modal-backdrop {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1990;
    width: 100vw;
    height: 100vh;
    background-color: $black;
    opacity: 0;
    display: none;
}

.modal--transparent {
    text-align: center;

    .modal-dialog {
        max-width: none;
        text-align: center;
        display: inline-block;
        width: auto;

        .modal-content {
            background: transparent;
            pointer-events: initial;
        }
    }

    .modal-header {
        padding: 0;
    }

    .modal-body {
        padding: 0;
    }

    .container-image {
        user-select: none;
        cursor: grab;
    }

    img {
        max-width: 90vw;
        max-height: 90vh;
        pointer-events: all;
        cursor: grab;
    }
}

dialog {
    // min-height: calc(100% - 3rem);
    max-height: calc(100% - 60px);
    border-style: none;
    padding: 0;
    align-items: center;
    width: 90%;
    max-width: $modal-md;
    opacity: 0;
    box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0);
    overflow: auto;
    box-sizing: border-box;
    transition:
        box-shadow $transition-duration-default $transition-ease-default,
        opacity $transition-duration-default $transition-ease-default;

    &.fade-in {
        opacity: 1;
        transition:
            box-shadow $transition-duration-default $transition-ease-default,
            opacity $transition-duration-default $transition-ease-default;
        box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.4);
    }

    .btn-close {
        z-index: 500;
        &:focus-visible {
            outline-width: thin !important;
        }
    }

    z-index: 2500;

    &:has(.wrapper-sticky-footer) {
        height: 100%;
        overflow-y: hidden;
        box-sizing: border-box;

        .modal-body {
            display: flex;
            flex: 1 0 auto;
            flex-direction: column;
            section {
                display: flex;
                flex: 1 0 auto;
                flex-direction: column;

                form {
                    display: flex;
                    flex: 1 0 auto;
                    flex-direction: column;

                    .wrapper-sticky-footer {
                        flex: 1 0 auto;
                    }
                }
            }
        }
    }
}
::backdrop {
    position: relative;
    background-color: transparent;
    z-index: 2400;
}

@mixin bodyModal {
    overflow: hidden;
    padding-right: 0;
}

@mixin modalVisible {
    opacity: 1;
    visibility: visible;
    backdrop-filter: blur(10px);

    &.modal-right {
        .modal-content {
            right: 0;
        }
    }

    .modal-backdrop {
        visibility: visible;
        opacity: 0.5;
    }
}

body.show-modal {
    @include bodyModal();

    .modal.show {
        @include modalVisible();
    }
}

body.show-modal--first-filter {
    .modal--first-filter {
        @include modalVisible();
    }
}

